--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,11 @@
+    <div style="text-align:center">
+        <div>
+            <span>공지사항</span> |
+            <span>제휴문의</span> |
+            <span>서비스 소개</span>
+        </div>
+        <div>
+            <h6 class="snp_footer_logo">SNP PLUS</h6>
+        </div>
 
-<div style="height: 10rem; background-color: #38df81; border-radius:1rem; margin:2rem;">
-
-</div>
+    </div>
