--- a/templates/head.html
+++ b/templates/head.html
@@ -1,5 +1,17 @@
+{% load static %}
+
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <!-- 합쳐지고 최소화된 최신 CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+
+    <!-- 구글 폰트 링크 -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
+
+    <!-- base 추가 -->
+    <link rel="stylesheet" type="text/css" href="{% static 'base.css' %}">
 
 </head>
