--- a/templates/header.html
+++ b/templates/header.html
@@ -1,4 +1,13 @@
 
-    <div style="height: 10rem; background-color: #38df81; border-radius:1rem; margin:2rem;">
+    <div style="text-align:center;" >
+        <div >
+            <h1 class="snp_header_logo">SNP PLUS+</h1>
+        </div>
+        <div>
+            <span>nav1</span>
+            <span>nav2</span>
+            <span>nav3</span>
+            <span>nav4</span>
 
+        </div>
     </div>
