--- a/accountapp/templates/accountapp/hello_world.html
+++ b/accountapp/templates/accountapp/hello_world.html
@@ -12,20 +12,27 @@
 
     </style>
 
-    <div style="height: 20rem; background-color: #38df81; border-radius:1rem; margin:2rem;">
-        <h1>
+    <div style= "border-radius:1rem; margin:2rem; text-align: center">
+        <h1 style="font-family: 'lobster', cursive;">
             testing
         </h1>
 
         <form action="/account/hello_world/" method="post">
             {% csrf_token %}
+            <div>
+                <input type="text" name="hello_world_input">            <!--텍스트 인풋창 생성 -->
+            </div>
+
             <input type="submit" class="btn btn-primary" value="POST">
         </form>
 
 
-        <h1>
-
-            {{ text }}
-        </h1>
+        {% if hello_world_list %}
+            {% for hello_world in hello_world_list %}
+            <h1>
+                {{ hello_world.text }}
+            </h1>
+            {% endfor %}
+        {% endif %}
     </div>
 {% endblock %}
