--- a/templates/head.html
+++ b/templates/head.html
@@ -14,4 +14,14 @@
     <!-- base 추가 -->
     <link rel="stylesheet" type="text/css" href="{% static 'base.css' %}">
 
+    <style>
+        @font-face {
+            font-family: 'AppleSDGothicNeo';
+            src: local('AppleSDGothicNeo'),
+            url("{% static 'fonts/AppleSDGothicNeo.ttc' %}") format("opentype");
+        }
+
+
+    </style>
+
 </head>
