--- a/accountapp/templates/accountapp/delete.html
+++ b/accountapp/templates/accountapp/delete.html
@@ -4,7 +4,7 @@
 {% block content %}
 
   <div style="text-align: center; max-width: 500px; margin: 4rem auto">
-    <form action="{% url 'accountapp:delete' pk=user.pk %}" method="post">
+    <form action="{% url 'accountapp:delete' pk=target_user.pk %}" method="post">
       <h4>회원 탈퇴</h4>
       {% csrf_token %}
       <input type="submit" class="btn btn-danger rounded-pill col-6 mt-3">
