--- a/accountapp/templates/accountapp/update.html
+++ b/accountapp/templates/accountapp/update.html
@@ -4,7 +4,7 @@
 {% block content %}
 
   <div style="text-align: center; max-width: 500px; margin: 4rem auto">
-    <form action="{% url 'accountapp:update' pk=user.pk %}" method="post">
+    <form action="{% url 'accountapp:update' pk=target_user.pk %}" method="post">
       <h4>회원 정보수정</h4>
       {% csrf_token %}
       {% bootstrap_form form %}   <!-- views.py에 지정한 폼클래스를 가지고 온다 -->
