--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -4,26 +4,44 @@
 {% block content %}
   <div>
     <div style="text-align: center; max-width: 500px; margin: 4rem auto">
-      <p>
-        {{ target_user.date_joined }}
-      </p>
 
-      {% target_user.profile %}
+      {% if target_user.profile %}
+      <!--32강 타겟유저의.프로필에서.이미지.url가져와라 -->
+      <img src="{{ target_user.profile.image.url }}" alt=""
+           style="height: 15rem; width 15rem; border-radius: 20rem; margin-bottom: 2rem;">
       <h2>
         {{ target_user.profile.nickname }}
+        {% if target_user == user %}
+        <a href="{% url 'profileapp:update' pk=target_user.profile.pk %}">
+          edit
+        </a>
+        {% endif %}
       </h2>
-      {% else %}
-      <a href=""{% url 'profileapp:create' %}
+        <h4 style="margin-bottom:3rem;">
+          {{ target_user.profile.message }}
+        </h4>
+        {% else %}
+          {% if target_user == user %}
+          <a href="{% url 'profileapp:create' %}">
+            <h2>
+              Create Profile
+            </h2>
+          </a>
+        {% else %}
         <h2>
-          Create Profile
+          닉네임을 설정해 주세요.
         </h2>
       {% endif %}
+      {% endif %}
+
 
       {% if target_user == user %}    <!-- 타겟유저와 현재의 유저가 같을경우 실행한다 -->
       <a href="{% url 'accountapp:update' pk=user.pk %}">
         <p>
           회원정보 수정
         </p>
+      </a>
+
       <a href="{% url 'accountapp:delete' pk=user.pk %}">
         <p>
           회원 탈퇴
