--- a/templates/header.html
+++ b/templates/header.html
@@ -1,7 +1,9 @@
 
     <div style="text-align:center;" >
         <div >
-            <h1 class="snp_header_logo">SNP PLUS+</h1>
+            <a href="{% url 'accountapp:hello_world' %}">
+                <h1 class="snp_header_logo">SNP PLUS+</h1>
+            </a>
         </div>
         <div>
             <span>nav1</span>
