--- a/articleapp/templates/articleapp/list.html
+++ b/articleapp/templates/articleapp/list.html
@@ -51,7 +51,12 @@
     <div>
       <img src="https://picsum.photos/200/400" alt="">
     </div>
+  </div>
 
+  <div style="text-align: center">
+    <a href="{% url 'articleapp:create' %}" class="btn btn-dark rounded-pill col-3 mt-3 mb-3">
+      글쓰기
+    </a>
 
   </div>
 
