--- a/templates/header.html
+++ b/templates/header.html
@@ -6,7 +6,10 @@
             </a>
         </div>
         <div>
-            <span>nav1</span>
+            <a href="{% url 'articleapp:list' %}">
+                <span>main</span>
+            </a>
+
             <span>nav2</span>
             <span>nav3</span>
 
