--- a/articleapp/templates/articleapp/list.html
+++ b/articleapp/templates/articleapp/list.html
@@ -23,44 +23,36 @@
 
 </style>
 
+  {% if article_list %}
   <div class="container">
-    <div class="item1">
-      <img src="https://picsum.photos/200/300" alt="">
-    </div>
-    <div>
-      <img src="https://picsum.photos/200/340" alt="">
-    </div>
-    <div>
-      <img src="https://picsum.photos/200/250" alt="">
-    </div>
-    <div>
-      <img src="https://picsum.photos/200/420" alt="">
-    </div>
-    <div>
-      <img src="https://picsum.photos/200/510" alt="">
-    </div>
-    <div>
-      <img src="https://picsum.photos/200/300" alt="">
-    </div>
-    <div>
-      <img src="https://picsum.photos/200/280" alt="">
-    </div>
-    <div>
-      <img src="https://picsum.photos/200/200" alt="">
-    </div>
-    <div>
-      <img src="https://picsum.photos/200/400" alt="">
-    </div>
+    {% for article in article_list %}
+    <a href="{% url 'articleapp:detail' pk=article.pk %}">
+      {% include 'snippets/card.html' with article=article %}
+    {% endfor %}
+
+    </a>
   </div>
+  <script src="{% static 'js/magicgrid.js' %}"></script>
+  {% else %}
+  <div style="text-align: center">
+    <h1>이미지가 보이지 않습니다.</h1>
+  </div>
+  {% endif %}
+
+  {% include 'snippets/pagination.html' with page_obj=page_obj %}
+
+
 
   <div style="text-align: center">
-    <a href="{% url 'articleapp:create' %}" class="btn btn-dark rounded-pill col-3 mt-3 mb-3">
+    <a href="{% url 'articleapp:create' %}" class="btn btn-primary btn-lg col-3 mt-3 mb-3">
       글쓰기
     </a>
 
+
+
   </div>
 
-  <script src="{% static 'js/magicgrid.js' %}"></script>
+
 
 
 
