--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -33,6 +33,12 @@
       {% endif %}
       <hr>
 
+      {% for comment in target_article.comment.all %}
+        {% include 'commentapp/detail.html' with comment=comment %}
+      {% endfor %}
+
+      {% include 'commentapp/create.html' with article=target_article %}    ## 댓글창을 가지고온다 37강
+
 
     </div>
   </div>
