--- a/articleapp/templates/articleapp/create.html
+++ b/articleapp/templates/articleapp/create.html
@@ -11,7 +11,7 @@
     <form action="{% url 'articleapp:create' %}" method="post" enctype="multipart/form-data">
       {% csrf_token %}
       {% bootstrap_form form %}   <!-- views.py에 지정한 폼클래스를 가지고 온다 -->
-      <input type="submit" class="btn btn-primary btn-lg btn-block col-6 mt-3">
+      <input type="submit" class="btn btn-primary btn-lg btn-block col-6 mt-3 px-2">
     </form>
 
 
