--- a/articleapp/templates/articleapp/list.html
+++ b/articleapp/templates/articleapp/list.html
@@ -4,20 +4,31 @@
 {% block content %}
 
 <style>
+
+    .container {
+      padding: 0;
+      margin: 0, auto;
+    }
+
+    .container a {
+      width:42%;
+      max-width: 250px;
+
+    }
+
     .container div {
-    width: 250px;
-    background-color: antiquewhite;
+
     display: flex;
     justify-content: center;
     align-items: center;
-
     border-radius: 1rem;
   }
 
-
   .container img {
+
     width: 100%;
     border-radius: 1rem;
+
   }
 
 
@@ -32,6 +43,8 @@
 
     </a>
   </div>
+
+
   <script src="{% static 'js/magicgrid.js' %}"></script>
   {% else %}
   <div style="text-align: center">
@@ -40,7 +53,6 @@
   {% endif %}
 
   {% include 'snippets/pagination.html' with page_obj=page_obj %}
-
 
 
   <div style="text-align: center">
